Add form styling; refs #22594

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -260,6 +260,7 @@ main h1 svg {
 
 .zlb-label {
   margin-bottom: 0.8rem;
+  grid-column: 1 / -1;
 }
 
 /* BS overrides */
@@ -501,6 +502,7 @@ input ~ .font-danger {
     height: 16px;
     display: inline-block;
     margin-right: 8px;
+    padding: 0;
   }
 
   input[checked="checked"] {
