Swap classes: container-fluid => container; refs #22612

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -177,7 +177,7 @@
                 <div
                     id="main"
                     style="margin-right: 0px;">
-                    <div class="container-fluid">
+                    <div class="container">
 
                         <h:form id="header">
                             <o:socket
