Add utility class for three column grid

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -539,6 +539,14 @@ input ~ .font-danger {
   &--no-borders {
     border: 0;
   }
+
+  /* standard is 2 columns
+   * 2 cols are used in views with inputs
+   * 3 cols in views with boxes (usually overviews of possible user actions)
+   */
+  &--three-cols {
+    --grid-tc: repeat(auto-fit, minmax(34rem, 1fr));
+  }
 }
 
 .layout #globalWarningMessage {
